java 8, proxy and bat file changes